--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SpotNot - Smart Travel Planning & Route Optimization</title>
-    <meta name="description" content="Plan eco-friendly routes with custom checkpoints, track your carbon footprint, and discover the best paths for your next adventure with SpotNot." />
+    <meta name="description" content="Plan routes with custom checkpoints and discover the best paths for your next adventure with SpotNot." />
     <meta name="author" content="SpotNot" />
-    <meta name="keywords" content="travel planning, route optimization, eco-friendly travel, carbon footprint, travel guide, checkpoints, route planner" />
+    <meta name="keywords" content="travel planning, route optimization, travel guide, checkpoints, route planner" />
 
     <meta property="og:title" content="SpotNot - Smart Travel Planning & Route Optimization" />
-    <meta property="og:description" content="Plan eco-friendly routes with custom checkpoints and track your carbon footprint. Discover the best paths for your next adventure." />
+    <meta property="og:description" content="Plan routes with custom checkpoints. Discover the best paths for your next adventure." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
